# gunther

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  init.sql  pyproject.toml
gunther/: __init__.py  __main__.py  bot.py  misc.py  models.py  quiz_machine.py  translator.py
translations/: en.yml  ru.yml
